working auto restart, option is called idle_time_in_seconds... let's test this on the field

--- a/web/config/locales/en.yml
+++ b/web/config/locales/en.yml
@@ -24,3 +24,6 @@ en:
     delete: "delete"
     edit: "edit"
     deactivate_token: "remove token"
+  race_session:
+    idle_time_in_seconds: Idle time (s)
+    title: Title
