--- a/web/config/locales/en.yml
+++ b/web/config/locales/en.yml
@@ -27,3 +27,6 @@ en:
   race_session:
     idle_time_in_seconds: Idle time (s)
     title: Title
+  messages:
+    invalidated_successfully: "Lap is marked as invalidated"
+    undo_invalidation_successfully: "Lap is marked as valid"
